@@ -1,3 +1,4 @@
+- cparm : Rock - Paper - Scissors algo
 - Bronya : Improve support for AMD CPU.
 - Bungo : Added "machine-signature"
 - Zenith432 : Protect timing code in scan_cpu() from interrupts, use bios for sleep()
